<resources>
    <string name="app_name">WeApp Tracking</string>
    <string name="facebook_app_id">442726522790761</string>
    <string name="fb_login_protocol_scheme">fb442726522790761</string>
    <string name="title_activity_map">Map</string>
    <string name="enter_message">Enter Message...</string>
    <string name="login">LOGIN</string>
    <string name="to">TO</string>
    <string name="your_account">YOUR ACCOUNT</string>
    <string name="enter_your_e_mail">Enter Your E-mail</string>
    <string name="passwrod">Passwrod</string>
    <string name="don_t_have_account">Don\'t have account ?</string>
    <string name="sign_up"> Sign up </string>
    <string name="sign_in">SIGN IN</string>
    <string name="enter_address_city_or_zip_code">Enter Address , City or Zip code</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="display_name">Display Name</string>
    <string name="hey_there_i_am_using_weapp_tracking_app">Hey there ! .. I am using WeApp Tracking App</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="create">LOGIN</string>
    <string name="new_account">Using Phone Number</string>
    <string name="enter_display_name">Enter Display Name</string>
    <string name="track_group">Track Group</string>
    <string name="leave_group">Leave Group</string>
    <string name="enter_the_group_name">Enter The Group Name :</string>
    <string name="enter_your_status">Enter your status :)</string>
    <string name="save_changes">Save Changes</string>
    <string name="current_user_status">Current User Status</string>
    <string name="send_frined_request">Send Frined Request</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="search_here">Search here</string>
    <string name="app_users">App Users :</string>
    <string name="last_seen">Last Seen</string>
    <string name="friends">Friends :</string>
    <string name="display_user_status">Display user status</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="message_text">Message Text</string>
    <string name="_00_00">00:00</string>
    <string name="user_default_status">User Default Status</string>
    <string name="group_members">Group Members :</string>
    <string name="profile">Profile</string>
    <string name="requests">Requests</string>
    <string name="log_out">Log out</string>
    <string name="to_add_this_profile_please_search_for_this_code_in_child_search_page">To add this Profile please search for this code in Child Search Page :</string>
    <string name="title_activity_children">ChildrenActivity</string>
    <string name="children">Children</string>


</resources>
