<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

   <item
       android:id="@+id/action_profile"
       android:orderInCategory="100"
       android:title="@string/profile"
       app:showAsAction="never"
       />


    <item
        android:id="@+id/action_requests"
        android:orderInCategory="100"
        android:title="@string/requests"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_logOut"
        android:orderInCategory="100"
        android:title="@string/log_out"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_map"
        android:orderInCategory="100"
        android:icon="@drawable/ic_map"
        app:showAsAction="always"
        android:title="Map"
        tools:ignore="AlwaysShowAction,HardcodedText" />
</menu>