<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:weightSum="10"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:stateListAnimator="@animator/lift_on_touch"
    tools:ignore="UnusedAttribute">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/message_profile_layout"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_weight="0"
            android:src="@drawable/avatar"
            tools:ignore="ObsoleteLayoutParam" />

        <TextView
            android:id="@+id/message_text_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_text_layout"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/message_profile_layout"
            android:padding="0dp"
            android:text="@string/message_text"
            android:textColor="#444444"
            android:textSize="14sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/name_text_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@+id/message_profile_layout"
            android:text="@string/display_name"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/time_text_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/name_text_layout"
            android:text="@string/_00_00"
            android:textSize="12sp"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/message_image_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/message_text_layout"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:layout_marginBottom="5dp"
            tools:ignore="ContentDescription" />


    </RelativeLayout>


</android.support.v7.widget.CardView>
