<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".ChildHomeActivity">


    <View
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:alpha="0.5"
        android:layout_alignParentTop="true" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:id="@+id/profile_pic"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/avatar" />

    <TextView
        android:id="@+id/displayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_pic"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:layout_marginTop="34dp"
        android:text="@string/display_name" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/displayName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:textColor="#8b8b8b"
        android:textSize="15sp"
        android:text="@string/to_add_this_profile_please_search_for_this_code_in_child_search_page" />

    <TextView
        android:id="@+id/child_code"
        android:layout_below="@+id/status"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="25sp"/>


    <Button
        android:id="@+id/settings_img_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/displayName"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="22dp"
        android:background="@drawable/buttonshape"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:stateListAnimator="@animator/lift_on_touch"
        android:text="@string/change_image"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        tools:ignore="UnusedAttribute" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="54dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/settings_img_btn"
        android:layout_marginEnd="19dp"
        android:onClick="logoutButton"
        app:srcCompat="@drawable/ic_out" />


</RelativeLayout>