<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.youssif.joe.cellmonitor.MapActivity" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:elevation="10dp"
        android:background="@drawable/white_border"
        android:id="@+id/relLayout1"
        tools:ignore="UnusedAttribute">
        
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:id="@+id/ic_magnify"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_magnify"
            tools:ignore="ContentDescription,RtlHardcoded" />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/ic_magnify"
            android:layout_centerVertical="true"
            android:textSize="15sp"
            android:textColor="#000"
            android:singleLine="true"
            android:id="@+id/input_search"
            android:background="@null"
            android:hint="@string/enter_address_city_or_zip_code"
            android:textColorHint="#3e3e3e"
            android:imeOptions="actionSearch"
            tools:ignore="RtlHardcoded" />




    </RelativeLayout>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/relLayout1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:id="@+id/ic_gps"
        android:src="@drawable/ic_gps"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/place_picker"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:layout_below="@+id/relLayout1"
        android:src="@drawable/ic_places"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/place_picker"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:id="@+id/place_info"
        android:src="@drawable/ic_info"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/track_them"
        android:layout_below="@id/ic_gps"
        android:scaleType="centerCrop"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_track"
        android:visibility="gone"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        >


        <TextView
            android:id="@+id/normal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/normal"
            android:gravity="center"
            android:textStyle="italic"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:background="@drawable/back_border"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:stateListAnimator="@animator/lift_on_touch"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/satellite"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/satellite"
            android:textStyle="italic"
            android:textSize="17sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/back_border"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:stateListAnimator="@animator/lift_on_touch"
            tools:ignore="UnusedAttribute" />
        <TextView
            android:id="@+id/terrain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/terrain"
            android:textStyle="italic"
            android:textSize="17sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/back_border"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:stateListAnimator="@animator/lift_on_touch"
            tools:ignore="UnusedAttribute" />
        <TextView
            android:id="@+id/hybrid"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hybrid"
            android:textStyle="italic"
            android:textSize="17sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/back_border"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:stateListAnimator="@animator/lift_on_touch"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>




</RelativeLayout>







